# python-binance-graphql

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
python_binance_graphql/: __init__.py  binance_client.py
python_binance_graphql/models/: __init__.py  base_model.py  coin_info.py  error.py  network_info.py  snapshot.py  system_status.py
python_binance_graphql/models/c2c/: __init__.py  c2c_trade_history.py
python_binance_graphql/models/fiat/: __init__.py  fiat_history.py  fiat_payments_history.py
python_binance_graphql/models/filters/: __init__.py  exchange_filters.py  symbol_filters.py
python_binance_graphql/models/market_data/: __init__.py  aggregated_trade.py  current_average_price.py  exchange_info.py  kline.py  last_day_price_change.py  old_trade.py  order_book.py  recent_trade.py  server_time.py  symbol_order_book_ticker.py  symbol_price_ticker.py  trade.py
python_binance_graphql/models/savings/: __init__.py  flexible_product.py
python_binance_graphql/models/snapshot_types/: __init__.py  futures_data.py  margin_data.py  spot_data.py
python_binance_graphql/models/wallet/: __init__.py  account_status.py  account_trading_status.py  api_key_permissions.py  asset_detail.py  asset_dividend_record.py  coin_info.py  deposit_address.py  deposit_history.py  dust_log.py  dust_transfer.py  funding_wallet.py  network_info.py  old_trade_lookup.py  query_user_universal_transfer_history.py  savings_position.py  (+6 more)
python_binance_graphql/utils/: binance_request.py  custom_types.py  enums.py
tests/: test_python_binance_graphql.py
